@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-16T16:20:36Z",
+  "timestamp" : "2022-11-17T01:17:57Z",
   "count_outdated" : 665,
   "uniques_outdated" : 378,
-  "count" : 683,
+  "count" : 684,
   "uniques" : 386,
   "clones" : [
     {
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-11-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
